# educational-backscatter-platform

./: .gitignore  LICENSE.txt  README.md
baseband/: CMakeLists.txt  README.md  backscatter.pio  generate-backscatter-pio.py  main.c
carrier-CC2500/: CMakeLists.txt  README.md  main.c
carrier-Firefly/: README.md
carrier-characteristics/: README.md
carrier-receiver-CC1352/: README.md
carrier-receiver-baseband/: CMakeLists.txt  README.md  command_receiver.c  command_receiver.h  main.c  serial-print.py
demo/: config.xlsx  demo.py  demo_cc1352.py  test.txt
hardware/: Bill-Of-Materials.xls  README.md  backscatter-tag.kicad_pcb  backscatter-tag.kicad_prl  backscatter-tag.kicad_pro  backscatter-tag.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
hardware/footprints/backscatter.pretty/: MSOP8.kicad_mod  SMA PCB THT Jack Straight WR-SMA.kicad_mod  SMA-60312002114503.kicad_mod  SMA-CONREVSMA001-G.kicad_mod  SOD-123FL-2.kicad_mod  SOP8.kicad_mod  SSOP5.kicad_mod  mounting-whole.kicad_mod
hardware/symbols/: backscatter-parts.kicad_sym
project_pico_libs/: backscatter.c  backscatter.h  carrier_CC2500.c  carrier_CC2500.h  packet_generation.c  packet_generation.h  receiver_CC2500.c  receiver_CC2500.h
receiver-CC2500/: CMakeLists.txt  README.md  main.c
stats/: README.md  functions.py  log.txt  statistics.ipynb
